# ml_dl_for_rfi_mitigation

./: .gitignore  1_cnn_model.ipynb  1d_cnn_global_test_rfi_cleaning_real_test.ipynb  README.md  classical_learning_stat.ipynb  classical_learning_stat.py  creating_dataset_from_filterbank_by_indexes.ipynb  creating_dataset_from_filterbank_by_indexes.py  mlp_global_test_rfi_cleaning_real_test.ipynb  pyproject.toml  stat_analysis.ipynb
configs/: README.md
docs/: artifact_manifest.md  data_contract.md  notebook_workflow.md  roadmap.md
legacy_exports/: README.md
notebooks/: README.md
notebooks/01_dataset_creation/: subdataset_creation.ipynb
src/rfimt/: README.md  __init__.py  constants.py  features.py  io.py  labels.py  metrics.py  models.py  splits.py
