[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rfimt"
version = "0.1.0"
description = "Notebook-first ML/DL experiments for channel-level RFI mitigation."
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
]

[tool.setuptools.packages.find]
where = ["src"]
